Partial modularization