@@ -15,5 +15,8 @@ echo ""
 $JAVA \
 	--class-path 'build/class-path/*' \
 	--module-path build/module-path \
+	--add-modules monitor.observer.alpha,monitor.observer.beta \
+	--add-modules monitor.utils,monitor.statistics \
+	--add-modules monitor.rest \
 	--add-modules java.xml.bind \
 	monitor.Main
